fixed flicker

--- a/sketches/20161202-style.css
+++ b/sketches/20161202-style.css
@@ -119,7 +119,6 @@ span.date {
 /* draggable */
 .draggable.is-pointer-down {
 	z-index: 33;
-	opacity: .5;
 } .draggable.is-dragging {
 	z-index: 33; 
 	opacity: 0.7; 
